--- a/index.html
+++ b/index.html
@@ -3,18 +3,31 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Whack-a-Mole Game</title>
 
-    <title>Sketch</title>
+    <!-- Bootstrap 5 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="style.css">
-
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
     <script src="libraries/quicksettings.js"></script>
     <script src="libraries/p5.gui.js"></script>
   </head>
 
-  <body>
+  <body class="text-center bg-success-subtle">
+
+    <div class="container mt-4">
+      <h1 class="mb-4">Whack-a-Mole!</h1>
+      <div class="mb-3">
+        <button id="startButton" class="btn btn-primary btn-lg">Start Game</button>
+      </div>
+      <div class="d-flex justify-content-center gap-4 mb-3">
+        <div id="scoreDisplay" class="fw-bold">Score: 0</div>
+        <div id="timerDisplay" class="fw-bold">Time: 30s</div>
+      </div>
+    </div>
+
     <script src="sketch.js"></script>
   </body>
 </html>
