--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <div id="scoreDisplay" class="fw-bold">Score: 0</div>
         <div id="timerDisplay" class="fw-bold">Time: 30s</div>
       </div>
+      <div class="progress" style="height: 25px;">
+          <div id="timeBar" class="progress-bar progress-bar-striped bg-success" role="progressbar"
+           style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+          </div>
+      </div>
     </div>
 
     <script src="sketch.js"></script>
