--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
            style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
           </div>
       </div>
+      <div id="gameMessage" class="alert alert-info mt-3 d-none" role="alert"></div>
     </div>
 
     <script src="sketch.js"></script>
