--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whack-a-Mole Game</title>
 
-    <!-- Bootstrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="libraries/p5.min.js"></script>
     <script src="libraries/p5.sound.min.js"></script>
@@ -15,23 +12,38 @@
     <script src="libraries/p5.gui.js"></script>
   </head>
 
-  <body class="text-center bg-success-subtle">
+  <body class="bg-success-subtle">
 
-    <div class="container mt-4">
-      <div class="mb-3">
-        <button id="startButton" class="btn btn-primary btn-lg">Start Game</button>
+    <!-- Custom Modal -->
+   <div id="customStartModal" class="custom-modal">
+  <div class="custom-modal-content">
+    <h2>Whack-a-Mole!</h2>
+    <button id="startButton" class="start-btn">Start Game</button>
+  </div>
+</div>
+
+
+   <div id="gameOverModal" class="custom-modal" style="display: none;">
+  <div class="custom-modal-content">
+    <h2>Game Over!</h2>
+    <p id="finalScoreText">Your score: 0</p>
+    <button id="restartButton">Play Again</button>
+  </div>
+</div>
+
+
+    <!-- Side Score & Timer -->
+    <div class="score-panel">
+      <div id="scoreDisplay" class="fw-bold">Score: 0</div>
+      <div id="timerDisplay" class="fw-bold">Time: 30s</div>
+      <div class="progress-bar-background">
+        <div class="progress-bar-container">
+        <div id="timeBar" class="progress-bar-fill"></div>></div>
       </div>
-      <div class="d-flex justify-content-center gap-4 mb-3">
-        <div id="scoreDisplay" class="fw-bold">Score: 0</div>
-        <div id="timerDisplay" class="fw-bold">Time: 30s</div>
       </div>
-      <div class="progress" style="height: 25px;">
-          <div id="timeBar" class="progress-bar progress-bar-striped bg-success" role="progressbar"
-           style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-          </div>
-      </div>
-      <div id="gameMessage" class="alert alert-info mt-3 d-none" role="alert"></div>
-    </div>
+
+    <!-- Game Message -->
+    <div id="gameMessage" class="game-message d-none" role="alert"></div>
 
     <script src="sketch.js"></script>
   </body>
