Timer and Score design changed

--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
 </div>
 
 
-    <!-- Side Score & Timer -->
-    <div class="score-panel">
-      <div id="scoreDisplay" class="fw-bold">Score: 0</div>
-      <div id="timerDisplay" class="fw-bold">Time: 45s</div>
-      <div class="progress-bar-background">
-        <div class="progress-bar-container">
-        <div id="timeBar" class="progress-bar-fill"></div>></div>
-      </div>
-      </div>
+  <!-- Side Score & Timer -->
+  <div class="top-panel">
+  <div id="timerDisplay" class="fw-bold">Time: 45s</div>
+  <div class="progress-bar-container">
+    <div id="timeBar" class="progress-bar-fill"></div>
+  </div>
+  <div id="scoreDisplay" class="fw-bold">Score: 0</div>
+</div>
+
+
 
     <!-- Game Message -->
     <div id="gameMessage" class="game-message d-none" role="alert"></div>
