credit page update 1

--- a/index.html
+++ b/index.html
@@ -30,19 +30,42 @@
 
   <!-- Credit Modal -->
   <div id="creditModal" class="custom-modal" style="display: none;">
-    <div class="custom-modal-content">
+    <div class="custom-modal-content" style="max-width: 500px; text-align: left;">
       <span id="closeCreditModal"
         style="position: absolute; top: 10px; right: 15px; font-size: 1.5rem; cursor: pointer;">&times;</span>
-      <h2>Developer Credits</h2>
-      <p><strong>Developer:</strong> Hasan Shamim Shaon, Md. Asaf-uddowla Golap, Shahriar Rahman Khan, Afolabi Temilola
+      <h2 style="text-align: center; margin-bottom: 1rem;">Game Credits</h2>
+
+      <p><strong>Game Title:</strong><br>Whack-a-Mole: Progressive Edition</p>
+
+      <p><strong>Developed By:</strong><br>
+        Hasan Shamim Shaon<br>
+        Md. Asaf-uddowla Golap<br>
+        Shahriar Rahman Khan<br>
+        Afolabi Temilola
       </p>
-      <p><strong>Game:</strong> Whack-a-Mole with Progressive Difficulty</p>
-      <p><strong>Year:</strong> 2025</p>
-      <p><strong>Tools:</strong> p5.js, HTML/CSS, JavaScript</p>
-      <button id="backToHomeButton" class="start-btn" style="margin-top: 1.5rem; background-color: #6c757d;">Back to
-        Home</button>
+
+      <p><strong>Technologies Used:</strong><br>
+        p5.js, HTML5, CSS3, JavaScript
+      </p>
+
+      <p><strong>Release Year:</strong><br>2025</p>
+      <p><strong>Version:</strong><br>1.0.0</p>
+
+      <hr style="margin: 1.5rem 0; border-top: 1px solid #ccc;">
+
+      <p style="font-size: 0.9rem; text-align: center;">
+        © 2025 Team Alpha. All rights reserved.<br>
+        Unauthorized copying, distribution, or modification of this game is prohibited.
+      </p>
+
+      <div style="text-align: center;">
+        <button id="backToHomeButton" class="start-btn" style="margin-top: 1.5rem; background-color: #6c757d;">
+          Back to Home
+        </button>
+      </div>
     </div>
   </div>
+
 
 
   <div id="gameOverModal" class="custom-modal" style="display: none;">
